# rust-lib-extra-symbols

./: Cargo.toml  README.md
lib1/: Cargo.toml
lib1/src/: lib.rs
lib2/: Cargo.toml
lib2/src/: lib.rs
