[package]
name = "lib2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib1 = {path = "../lib1"}

[profile.release]
strip=true
opt-level=3
panic="abort"
lto='fat'
codegen-units=1
